# recipe-app

./: .gitignore  README.md  compose.yaml  docker-compose.yml
.docker/: docker-compose.yaml
backend/: .env.example  README.md  alembic.ini  main.py  prestart.sh  pyproject.toml  requirements.txt  run.sh
backend/alembic/: env.py
backend/alembic/versions/: 081f67ff09ad_create_notes_table.py  6abe293f98a7_create_recipe_table.py  914d67ed88db_create_note_table.py  ec46ad7fc181_added_all_tables.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: auth.py  recipe.py
backend/app/core/: auth.py  config.py  security.py
backend/app/crud/: __init__.py  crud_ingredient.py  crud_recipe.py  crud_user.py
backend/app/db/: base.py  data.json  init_db.py  seed.py
backend/app/models/: ingredient.py  recipe.py
backend/app/schemas/: __init__.py  ingredient.py  recipe.py  user.py
backend/app/services/: recipe.py
backend/app/templates/: index.html
backend/src/: deps.py  main.py
backend/src/api/api_v1/: recipes.py
backend/src/crud/: __init__.py  crud_note.py
backend/src/db/: base.py  session.py
backend/src/models/: note.py  user.py
backend/src/schemas/: note.py
frontend/: README.md  package-lock.json  package.json
graphql_server/: Dockerfile  README.md  codegen.ts  package.json
python_server/: Dockerfile  README.md
recipe-backemd/: Dockerfile  manage.py  requirements.txt
src/: main.py
t3_app/: README.md  next.config.mjs  package.json  prettier.config.cjs  (+1 more)
(+44 files in other folders)
