[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend of Recipe App"
authors = ["tbjag <tbjagodits@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
alembic = "^1.11.1"
psycopg2 = "^2.9.6"
fastapi-pagination = "^0.12.4"
python-slugify = "^8.0.1"
passlib = "^1.7.4"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.16"
pydantic = {extras = ["dotenv"], version = "^1.10.9"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
